[package]
name = "collab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "json",
    "registry",
    "tracing-log",
] }
tracing-core = "0.1.32"
tracing = "0.1.40"
log = "0.4.21"
[[bin]]
name = "collab"
path = "src/main.rs"
